# youtubeee

./: .gitignore  README.md  deploy.sh  pyproject.toml  share-env.sh  youtubeee.py
config/: youtubeee.todo.sample.json
plugin/configer/: .env  package-lock.json  package.json
plugin/configer/src/: index.js
plugin/configer/src/public/: index.html
plugin/configer/src/public/css/: style.css
plugin/configer/src/public/js/: script.js
plugin/configer/src/routes/: api.js
src/: __init__.py  youtubeee.py
src/v3/: uploader.py
v3/: uploader.py
