[tool.poetry]
name = "youtubeee"
version = "0.1.0"
description = ""
authors = ["mdvtkr <mdvtkr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
google-api-python-client = "^2.80.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
