[tool.poetry]
name = "youtubeee"
version = "0.2.1"
description = ""
authors = ["mdvtkr <mdvtkr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
google-api-python-client = "^2.80.0"
oauth2client = "^4.1.3"
pyinstaller = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."src/__init__.py"]
